# kaori-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DECISIONS.md  FRONTEND-PARITY.md  PLAN.md  design.md
kaori_agent/: __init__.py  __main__.py  cli.py  config.py  engine.py  feed_context.py  mcp_client.py  prompt.py  session.py  tool_registry.py  vault_context.py
kaori_agent/llm/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
kaori_agent/prompt_kit/: __init__.py  builder.py  feed.py  persona.py  session_digests.py  session_summary.py
kaori_agent/tools/: __init__.py  base.py  memory.py  read_file.py  search.py  web_search.py
tests/: test_anthropic_backend.py  test_config.py  test_engine.py  test_openai_backend.py  test_session.py  test_tool_registry.py  test_tools.py  test_vault_scope.py
